fix breadcrumbs wrapping

--- a/src/components/breadcrumbs/style.module.scss
+++ b/src/components/breadcrumbs/style.module.scss
@@ -1,6 +1,8 @@
 .breadcrumb-item {
   font-size: 14px;
-  position: relative;
+  margin-right: 6px;
+  text-wrap: nowrap;
+  padding: 0;
 
   a {
     text-decoration: none;
@@ -13,12 +15,10 @@
   }
 }
 
-.breadcrumb-item:not(:last-of-type)::after {
+.breadcrumb-item:not(:first-of-type)::before {
   content: '›';
   font-size: 12px;
-  right: -12px;
-  top: 50%;
-  transform: translateY(-50%);
-  position: absolute;
-  color: var(--gray-800);
+  display: inline-block;
+  margin-right: 6px;
+  color: var(--gray-10);
 }
